# altair_back

./: Dockerfile  pyproject.toml
app/: crud.py  main.py  models.py
app/api/: main.py
app/api/routes/: items.py  oauth.py  telegram.py
app/core/: config.py
app/services/: bot_runner.py  gmail.py  gmail_background_worker.py  message_classifier.py  oauth.py  open_ai.py  telegram.py  telegram_bot.py  telegram_runner.py
